Bug 876305 - Pass the media mimetype on to the gstreamer backend r=alessandro.d